[tool.poetry]
name = "migee"
version = "0.0.1"
description = "An implmentation of the Migee RESTful API which manages schema changes for teams."
authors = ["satoru <satorulogic@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
